# liquidizers

./: Cargo.toml  README.md  bindgen.sh
examples/agc/: crcf.rs  main.rs  qpsk.rs  rrrf.rs  squelch.rs
examples/agc_crcf/: main.rs
examples/debug_ex/: main.rs
liquidizers-sys/: Cargo.toml
liquidizers-sys/src/: ffi.rs  lib.rs
src/: agc.rs  lib.rs  modem.rs
